update hearing tests